interpreter/grammar.ebnf
scope = "{" , {loc | scope} , "}" ; 

loc = [ declaration | struct_definition | print_call | struct_declaration ] , ";" ; #loc = line of code

declaration = type , ID , [ "=" , return_expression ] ; #interpreter has to check that type on left == type on right

return_expression = arithmetic | method_call | number | STRING | struct_access | ID ; #can't use factor here because this ID can be anything previously defined

struct_definition = "struct" , struct_scope , ID ;

struct_loc = [ declaration ] , ";" ;

struct_scope = "{" , {struct_loc} , "}" ; 

struct_declaration = STRUCTACCESS , "=" , return_expression ; #STRUCTACCESS has the format "ID.ID"

arithmetic = factor , { "+" | "-" | "*" | "/" , factor } ;

method_call = "getAddr" | "getValue" , "(" , ID | struct_access, ")" ;

print_call = "print", "(" , STRING , ")" ;

factor = ID | number ; #ID has to refer to a previously defined int/float/double/long

number = [ "-" ] , INTEGER | DECIMAL ;
`
type = "int" | "long" | "char" | "float" | "double" | ("reference" , "<" , type , ">") | ID ; #ID has to refer to a previously defined struct

# all the predefined strings in here have to be found by the ID method
